<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:background="@drawable/img_3"
    >

    <ImageButton
        android:id="@+id/back_icon"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:background="@drawable/back_icon"
        android:paddingTop="100sp"
        android:paddingBottom="50sp"
        android:contentDescription="@string/navigate_back_to_search_page" />

    <TextView
        android:id="@+id/Available_buses"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_toEndOf="@id/back_icon"
        android:text="@string/available_buses"
        android:gravity="center_vertical"
        android:paddingStart="20sp"
        android:paddingEnd="20sp"
        android:textSize="28sp"
        android:background="@drawable/img_2"
        android:textColor="#F6F2F1"/>

    <LinearLayout
        android:id="@+id/search_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Available_buses"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/sourcePlace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/source_place"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="#F9F9F9"
            android:padding="10sp"
            android:background="#390B40"/>

        <TextView
            android:id="@+id/seperator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:text="@string/to"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/destiPlace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/destination_place"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="#F9F9F9"
            android:padding="10sp"
            android:background="#390B40"/>
    </LinearLayout>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_bus_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/search_info"
        android:layout_marginTop="15dp"
        android:paddingStart="20sp"
        android:paddingTop="20sp"
        android:paddingEnd="20sp"
        android:paddingBottom="20sp"
        >

    </androidx.recyclerview.widget.RecyclerView>

</RelativeLayout>
